--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href ="Styles/main.css">
+	<link rel="stylesheet" type="text/css" href ="main.css">
 	</head>
 	<style>
 		p{
