--- a/about-me.html
+++ b/about-me.html
@@ -22,7 +22,7 @@
 	 text-align: center;
 		}
 		</style>
-	<link rel="stylesheet" type="text/css" href ="styles/main.css">
+	<link rel="stylesheet" type="text/css" href ="main.css">
 	</head>
 <body>
 	<NAV>
