--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href ="Styles/main.css">
+	<link rel="stylesheet" type="text/css" href ="main.css">
 	<style>
 		h3{
 		color: gold;
