--- a/proj.html
+++ b/proj.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <title>Project</title>
-        <link rel="stylesheet" type="text/css" href ="Styles/main.css">
+        <link rel="stylesheet" type="text/css" href ="main.css">
         <style>
       h1   {
       color: gold;
