--- a/about-me.html
+++ b/about-me.html
@@ -27,10 +27,14 @@
 <body>
 	<NAV>
 		<ul style="text-align: center;">
-		<a href="index.html">|Home|</a>
-		<a href="about-me.html">|About Me|</a>
-		<a href="projects.html">|Projects|</a>
-		<a href="contact.html">|Contacts|</a>
+		<a  style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;"href="index.html">Home</a>
+		<a style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: centstyle="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;"er; href="about-me.html">About Me</a>
+		<a style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;" href="proj.html">Project</a>
+   		 <a style="width: 24.19%;  height: 30px;  border: 1px solid  #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid  #ffff00;" href="contact.html">Contact us</a>
 		</ul>	
 	</NAV>
 	<h1 style=text-decoration:underline;>About Me</h1>
