--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,14 @@
 <body style="font-size: 20px">
 	<NAV>
 		<ul style="text-align: center;">
-		<a style="
-        width: 25.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
-        background-color: #f6d365; border-bottom: 1px solid #ffff00;" href="proj.html">Home</a>
-		<a style="
-        width: 25.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
-        background-color: #f6d365; border-bottom: 1px solid #ffff00;" href="proj.html">Contact us</a>
+		<a  style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;"href="index.html">Home</a>
+		<a style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: centstyle="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;"er; href="about-me.html">About Me</a>
+		<a style="width: 24.19%;  height: 30px;  border: 1px solid #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid #ffff00;" href="proj.html">Project</a>
+   		 <a style="width: 24.19%;  height: 30px;  border: 1px solid  #ffff00; float: center; text-align: center;
+        background-color: #f6d365; border-bottom: 1px solid  #ffff00;" href="contact.html">Contact us</a>
 	</ul>
 	</NAV>
 	<h1>Contact us:</h1>
